--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.9",
     "react-icons": "^4.9.0",
+    "react-router-dom": "^6.11.2",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
